--- a/taller.ipynb
+++ b/taller.ipynb
@@ -6,6 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install numpy\n",
+    "!pip intall pandas\n",
+    "!pip install nextory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def sumar(a,b):\n",
     "    return a+b\n",
     "\n",
